<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DashboardActivity"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/dashboardScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/accountHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:background="@color/custom_bg"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User"
                        android:textSize="30sp"
                        android:fontFamily="@font/bebas_neue"
                        android:textColor="#607D8B"
                        android:gravity="end"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_account"
                        app:tint="#607D8B"
                        android:contentDescription="@string/user_picture"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/accountHeader"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="sans-serif-black"
                android:paddingVertical="10dp"
                android:text="@string/log_out"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingHorizontal="10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/navigation_background"
            android:orientation="horizontal"
            android:elevation="2dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/icHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/home"
                    android:src="@drawable/ic_home"
                    app:tint="@color/white"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/icKeranjang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/wishlist"
                    android:src="@drawable/ic_troli"
                    app:tint="@color/white"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/icAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_account"
                    app:tint="@color/custom_button"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>